# nfs-ganesha-export-api

./: .gitattributes  .gitignore  README.md  api.yml  debian.sh  nfs-ganesha-export-api.service  pyproject.toml  requirements.txt  setup.py  tests.py
.github/workflows/: python.yml  release.yml
debian/: control  dirs  install  prerm  rules
nfsapi/: __init__.py  api.py  common.py  exports.py  parser.py
